# linked-lists

./: Cargo.toml  README.md
src/: bad_but_safe_doubly_linked_deque.rs  bad_list.rs  lib.rs  ok_list.rs  ok_unsafe_singly_linked_queue.rs  persistent_singly_linked_list.rs
